# ioutrack

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  ioutrack.pyi  pyproject.toml
.github/workflows/: CI.yml  Dockerfile
benches/: bbox.rs  kalman.rs  mot.rs
benches/data/: mot_20-03_500_dets.npy  mot_20-03_500_frame_borders.npy  mot_20-03_yolox_500_dets.npy  mot_20-03_yolox_500_frame_borders.npy
demo/: create_demo_video.ipynb  demo_utils.py  requirements.txt
src/: bbox.rs  box_tracker.rs  kalman.rs  lib.rs  ndarray_utils.rs  num_utils.rs  sort.rs  trackers.rs
src/trackers/: base.rs  bytetrack.rs  mod.rs  sort.rs
