[package]
name = "ioutrack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ioutrack"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = { version = "0.16.3", features = ["extension-module"] }
ndarray = {version = "0.15.4", features = ["approx-0_5"]}
approx = "0.5.1"
ndarray-linalg = {version = "0.14.1", features = ["openblas-static"]}
numpy = "0.16.2"
num = "0.4.0"
anyhow = "1.0.57"
itertools = "0.10.3"
lapjv = { git = "https://github.com/PaulKlinger/lapjv-rust" }
