[package]
name = "ioutrack"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ioutrack"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = { version = "0.16.3", features = ["extension-module", "anyhow"] }
ndarray = {version = "0.15.4", features = ["approx-0_5"]}
nalgebra = "0.30.0"
nshare = {version = "0.9.0", features = ["ndarray", "nalgebra_std"]}
approx = "0.5.1"
numpy = "0.16.2"
num = "0.4.0"
anyhow = "<1.0.49"
itertools = "0.10.3"
lapjv = { git = "https://github.com/PaulKlinger/lapjv-rust", rev="12527061a3" }

[dev-dependencies]
ndarray-npy = "0.8.1"
criterion = "0.3"

[[bench]]
name = "mot"
harness = false

[[bench]]
name = "kalman"
harness = false

[[bench]]
name = "bbox"
harness = false
