[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "ioutrack"
description = "IOU-based tracking algorithms (SORT & Bytetrack) implemented in Rust"
authors = [
    {name = "Paul Klinger", email = "klinger.paul@gmail.com"}
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = "src|notebooks|target"
